# postr

./: README.md  package.json  pnpm-lock.yaml  tailwind.config.js
.github/workflows/: create-publish-release.yml  publish.yml  test-on-pr.yml
src/: App.css  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  db.rs  delegation.rs  event.rs  lib.rs  main.rs  notice.rs  schema.rs  socket.rs  state.rs  subscription.rs  utils.rs
src/components/AboutModal/: index.tsx
src/components/ConfigRelaysModal/: index.tsx
src/components/EditProfile/: index.tsx
src/components/EditProfileModal/: index.tsx
src/components/LoadingWheel/: index.tsx
src/components/Message/: index.tsx
src/components/MessageBody/: index.tsx
src/components/MessageBodyItem/: index.tsx
src/components/MessageCompose/: index.tsx
src/components/MessageHead/: index.tsx
src/components/MessageInfoView/: index.tsx
src/components/MessagesNav/: index.tsx
src/components/MessagesNavHead/: index.tsx
src/components/MessagesNavList/: index.tsx
src/components/MessagesNavListItem/: index.tsx
src/components/Navigation/: index.tsx
src/components/NavigationButton/: index.tsx
src/components/NavigationHead/: index.tsx
src/components/PrivKeyModal/: index.tsx
src/components/ProfileFeed/: index.tsx
src/components/ProfileHeader/: index.tsx
src/components/RelaysList/: index.tsx
src/helpers/: nip19.ts  pubkey.ts  timeHelpers.ts
src/layouts/Layout/: index.tsx
src/lib/: types.ts
src/pages/: _app.tsx  feed.tsx  index.tsx  messages.tsx
tauri-app/: package.json  pnpm-lock.yaml
tauri-app/src/: style.css
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
(+19 files in other folders)
