[package]
name = "postr"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
nostr_rust = "0.15.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
tracing = "0.1.36"
rusqlite = { version = "0.26", features = ["array", "limits", "bundled", "modern_sqlite", "trace"] }
r2d2 = "0.8"
r2d2_sqlite = "0.19"
tokio = { version = "1", features = ["full", "tracing", "signal"] }
websocket = "0.22.0"
const_format = "0.2.28"
tungstenite = "0.17"
thiserror = "1"
lazy_static = "1.4"
bitcoin_hashes = { version = "0.10", features = ["serde"] }
rand = "0.8"
secp256k1 = { version = "0.25", features = ["bitcoin_hashes", "global-context", "rand-std", "rand"] }
regex = "1"
console-subscriber = "0.1.8"
tracing-subscriber = "0.2.0"
hex = "0.4"
tokio-tungstenite = {version="0.18.0", features = ["native-tls"] }
url = "2.3.1"
futures-util = "0.3.25"
mio = "0.8.5"
sha256 = "1.1.1"
reqwest = "0.11.13"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
